ingress0/test-ingress-myapp.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.abcd.com
    http:
      paths:
        - path: /demo
          backend:
            serviceName: myapp-svc
            servicePort: 80

        - path: /abc
          backend:
            serviceName: myapp-svc
            servicePort: 80
